# AI-Agents-Samples

./: .gitignore  README.md
Agno-Examples/Basics/: basic.py  requirements.txt
Agno-Groq-Examples/: basic.py  chroma_db.py  requirements.txt  structured_out.py  websearch.py
LLM-Apps/Langchain-Examples/: app.py  app_streamlit.py  docling.py  pyproject.toml
smolagents-examples/: .env.example
smolagents-examples/basic/: main.py  pyproject.toml
